[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/move_left.png" type="Texture" id=2]
[ext_resource path="res://scenes/HUD/Button.gd" type="Script" id=3]
[ext_resource path="res://assets/gfx/move_right.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/move_up.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]

radius = 115.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 1.0
radius = 115.0

[sub_resource type="CircleShape2D" id=3]

radius = 115.0

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MoveLeftNode" type="Sprite" parent="."]
position = Vector2( 20, 180 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="MoveLeftNode"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveLeftNode/Area2D"]
shape = SubResource( 1 )

[node name="MoveRightNode" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 64, 180 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="MoveRightNode"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveRightNode/Area2D"]
shape = SubResource( 2 )

[node name="MoveUpNode" type="Sprite" parent="."]
position = Vector2( 300, 180 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="MoveUpNode"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveUpNode/Area2D"]
shape = SubResource( 3 )

[connection signal="button_state_changed" from="MoveLeftNode/Area2D" to="." method="_on_button_state_changed"]
[connection signal="button_state_changed" from="MoveRightNode/Area2D" to="." method="_on_button_state_changed"]
[connection signal="button_state_changed" from="MoveUpNode/Area2D" to="." method="_on_button_state_changed"]
